...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_fragment"
    tools:context=".ui.property.propertydetail.PropertyDetailFragment">
    <LinearLayout
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/entry_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sold_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_interest_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/surface"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rooms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bathrooms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bedrooms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/street"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/city"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/postal_code"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/country"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/state"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...
