<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/navigation_edit"
        android:title="@string/edit"
        android:visible="false"
        android:icon="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/edit"
        app:showAsAction="always|withText"/>

    <item android:id="@+id/navigation_update"
        android:title="@string/update"
        android:visible="false"
        android:icon="@drawable/ic_baseline_update_24"
        android:contentDescription="@string/update"
        app:showAsAction="always|withText"/>

    <item android:id="@+id/navigation_create"
        android:title="@string/create"
        android:visible="false"
        android:contentDescription="@string/create"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/navigation_main_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24"
        android:contentDescription="@string/search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/navigation_result_search"
        android:title="@string/search"
        android:visible="false"
        android:contentDescription="@string/search"
        app:showAsAction="ifRoom|withText"/>
</menu>